--- a/springboot/18.User테이블 생성.md
+++ b/springboot/18.User테이블 생성.md
@@ -1,15 +1,115 @@
-🚀 목표 - 대댓글 X, 댓글의 댓글까지 구현 목표
+# 🚀 목표 - 대댓글 X, 댓글의 댓글까지 구현 목표
 
 ## Blog 테이블 만들기(User, Board, Reply)
 
-@Entity 어노테이션
+### 📌 ORM이란
 
-- 생성한 클래스를 SpringBoot실행시 읽어주어 MySQL에 자동으로 테이블을 생성해준다.
+JAVA(or 다른언어) Object(객체)를 테이블로 Mapping해주는 기술
+이곳에서 테이블명을 변경해주면 Springboot실행시 자동으로 관리해 변경해준다.
+
+```java
+@Entity
+public class User {
+  @Id
+  @GeneratedValue(strategy = GenerationType.IDENTITY)
+  private int id;
+
+  @Column(nullable = false, length = 30)
+  private String username;
+
+  @Column(nullable = false, length = 100)
+  private String password;
+
+  @Column(nullable = false, length = 50)
+  private String email;
+
+  @ColumnDefault("'user'")
+  private String role;
+
+  @CreationTimestamp
+  private Timestamp createDate;
+
+  private Timestamp updateDate;
+}
+
+```
+
+### 📚 어노테이션
+
+#### @Entity
+
+생성한 클래스를 SpringBoot실행시 읽어주어 DB에 자동으로 테이블을 생성해준다.
+
+#### @Id
+
+해당 변수를 테이블 PK로 지정
+
+#### @GeneratedValue
+
+PK와 함께쓰인다.(@Id)
+넘버링 생성 전략을 명시하는데 사용됨
+
+```java
+  @Id
+  @GeneratedValue(strategy = GenerationType.IDENTITY)
+  private int id;
+```
+
+- IDENTITY: 프로젝트에서 **연결된 DB의 넘버링 전략**을 따라간다
+  - ORACLE이라면 sequence
+  - MySQL이라면 auto_increment
+
+#### @Column
+
+테이블의 칼럼이라는 표시
+필수로 설정해야 하는 것은 아니고 필요한 컬럼 옵션만 작성하면 된다.
+
+```yml
+jpa:
+  open-in-view: true
+  hibernate:
+    # ddl-auto 재확인 필요
+    # create라면 실행 시 마다 테이블이 새로 생성됨
+    # 최초 1회 실행 => create, 이후 실행 => update
+    ddl-auto: create
+    naming:
+      # PhysicalNamingStrategyStandardImpl=>@Entity를 생성시 생성한 변수명 그대로 테이블을 생성하기
+      # SpringPhysicalNamingStrategy=>카멜표기법(myName)을 언더스코어+소문자(my_name)로 바꿔준다
+      physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+    use-new-id-generator-mappings: false
+    #>시퀀스의 방식을 어떻게 할 것인가, true-jpa의 넘버링 전략 사용
+    #>false->jpa의 기본을 따라가지 않겟다
+  show-sql: true
+  #>>show-sql:true는 sql을 콘솔에 출력해준다
+  properties:
+    hibernate.format_sql: true
+```
+
+>
 
 ### 추가 학습
 
-@GeneratedValue
-@Column
 @CreationTimestamp
 
 java - enum
+
+```yml
+jpa:
+  open-in-view: true
+  hibernate:
+    # ddl-auto 재확인 필요
+    # create라면 실행 시 마다 테이블이 새로 생성됨
+    # 최초 1회 실행 => create, 이후 실행 => update
+    ddl-auto: create
+    naming:
+      # PhysicalNamingStrategyStandardImpl=>@Entity를 생성시 생성한 변수명 그대로 테이블을 생성하기
+      # SpringPhysicalNamingStrategy=>카멜표기법(myName)을 언더스코어+소문자(my_name)로 바꿔준다
+      physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+    use-new-id-generator-mappings: false
+    #>시퀀스의 방식을 어떻게 할 것인가, true-jpa의 넘버링 전략 사용
+    #>false->jpa의 기본을 따라가지 않겟다
+  show-sql: true
+  #>>show-sql:true는 sql을 콘솔에 출력해준다
+  properties:
+    hibernate.format_sql: true
+```
