--- a/springboot/18.User테이블 생성.md
+++ b/springboot/18.User테이블 생성.md
@@ -1,4 +1,4 @@
-# 🚀 목표 - 대댓글 X, 댓글의 댓글까지 구현 목표
+# 🚀 목표 - 대댓글 X, 댓글의 댓글까지 구현
 
 ## Blog 테이블 만들기(User, Board, Reply)
 
@@ -40,6 +40,10 @@ public class User {
 
 생성한 클래스를 SpringBoot실행시 읽어주어 DB에 자동으로 테이블을 생성해준다.
 
+- 속성 - @Entity(name = "User")
+  JPA에서 사용할 엔티티 이름을 지정할 수 있다.
+  같은 클래스 이름이 없다면 가급적 기본값을 사용하도록 하자.
+
 #### @Id
 
 해당 변수를 테이블 PK로 지정
@@ -64,52 +68,72 @@ PK와 함께쓰인다.(@Id)
 테이블의 칼럼이라는 표시
 필수로 설정해야 하는 것은 아니고 필요한 컬럼 옵션만 작성하면 된다.
 
+#### @CreationTimestamp
+
+JPA가 아닌 `org.hibernate`에서 지원하는 어노테이션
+생성시의 타임스탬프를 기록해준다.
+
+### UpdateTimestamp
+
+업데이트기의 날짜를 기록해준다.
+
+### application.yml
+
+---
+
+### yml설정 파일
+
 ```yml
 jpa:
   open-in-view: true
   hibernate:
-    # ddl-auto 재확인 필요
-    # create라면 실행 시 마다 테이블이 새로 생성됨
-    # 최초 1회 실행 => create, 이후 실행 => update
     ddl-auto: create
     naming:
-      # PhysicalNamingStrategyStandardImpl=>@Entity를 생성시 생성한 변수명 그대로 테이블을 생성하기
-      # SpringPhysicalNamingStrategy=>카멜표기법(myName)을 언더스코어+소문자(my_name)로 바꿔준다
       physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     use-new-id-generator-mappings: false
-    #>시퀀스의 방식을 어떻게 할 것인가, true-jpa의 넘버링 전략 사용
-    #>false->jpa의 기본을 따라가지 않겟다
   show-sql: true
-  #>>show-sql:true는 sql을 콘솔에 출력해준다
   properties:
     hibernate.format_sql: true
 ```
 
->
+#### ddl-auto: (상태)
 
-### 추가 학습
+create - 스프링부트 실행 시 마다 테이블이 새로 생성됨
+update - 스프링부트 실행 시 생성된 테이블을 업데이트한다
+📌 따라서 최소 1회 create 실행 이후 update로 바꿔줄 것
 
-@CreationTimestamp
+#### nameing: 상태
 
-java - enum
+이름생성 형태를 설정하는곳
 
-```yml
-jpa:
-  open-in-view: true
-  hibernate:
-    # ddl-auto 재확인 필요
-    # create라면 실행 시 마다 테이블이 새로 생성됨
-    # 최초 1회 실행 => create, 이후 실행 => update
-    ddl-auto: create
-    naming:
-      # PhysicalNamingStrategyStandardImpl=>@Entity를 생성시 생성한 변수명 그대로 테이블을 생성하기
-      # SpringPhysicalNamingStrategy=>카멜표기법(myName)을 언더스코어+소문자(my_name)로 바꿔준다
-      physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-    use-new-id-generator-mappings: false
-    #>시퀀스의 방식을 어떻게 할 것인가, true-jpa의 넘버링 전략 사용
-    #>false->jpa의 기본을 따라가지 않겟다
-  show-sql: true
-  #>>show-sql:true는 sql을 콘솔에 출력해준다
-  properties:
-    hibernate.format_sql: true
+PhysicalNamingStrategyStandardImpl
+
+- @Entity를 실행시 생성한 변수명을 그대로 테이블을 생성한다.
+
+SpringPhysicalNamingStrategy
+
+- 카멜표기법(myName)을 언더스코어+소문자(my_name)으로 바꿔서 생성한다.
+
+##### show-sql: true
+
+sql문을 콘솔에 출력해준다.
+
+#### hibernate.format_sql: true
+
+sql문이 한줄로 주르륵 출력되는것을 보기 좋게 콘솔창에 보여줌
+
+> show-sql과 함꼐 쓰인다
+
+```
+Hibernate:
+    create table User (
+       id integer not null auto_increment,
+        createDate datetime(6),
+        email varchar(50) not null,
+        password varchar(100) not null,
+        role varchar(255) default 'user',
+        updateDate datetime(6),
+        username varchar(30) not null,
+        primary key (id)
+    ) engine=InnoDB
 ```
