--- a/springboot/blogproject/21.Reply테이블 생성.md
+++ b/springboot/blogproject/21.Reply테이블 생성.md
@@ -27,3 +27,18 @@ public class Reply {
   private Timestamp createDate;
 }
 ```
+
+### 💡 추가됨
+
+Board, User테이블에
+@Data - Lombok / getter, setter 생성자
+@NoArgsConsturctor - 빈 생성자
+@AllArgsConstructor - 모든 변수 생성자
+@Builder - 추가확인
+
+#### @ManyToOne
+
+ManyToOne, OneToMany 둘 중 어느 것이 맞는지 고르는 방법은 현재 내가 작성하는 테이블을 기준으로 잡고 선택하면 된다.
+
+EX) 한개의 Board에 여러개의 Reply(기준) 가능 =>ManyToOne
+한명의 User는 여러개의 Reply(기준) 가능 => ManyToOne
