--- a/Book/Java_Jungsuk/02.변수(Variable).md
+++ b/Book/Java_Jungsuk/02.변수(Variable).md
@@ -5,3 +5,79 @@
 ### 1.1 변수란?
 
 변수는 "변하는 수"라는 뜻이지만 프로그래밍 언어에서 변수(variable)이란 **값을 저장할 수 있는 메모리상의 공간**을 의미한다.
+
+🥕**하나의 변수에는 단 하나의 값만 저장**할 수 있다.
+
+### 1.2 변수의 선언과 초기화
+
+#### 변수의 선언
+
+"변수타입 + 변수이름" 으로 생성된다.
+
+```java
+int age; // int형의 age라는 이름의 변수 선언
+```
+
+#### 변수의 초기화
+
+변수를 선언이후 사용할 수 있으나, 그 전에 반드시 초기화(initailization) 해야한다. 메모리는 여러 프로그램이 공유해 사용하는 자원이므로 다른 프로그램에 의해 저장된 '알 수없는 값(garbage value)'이 남아있을 수 있기 때문이다.
+
+```java
+int age = 25; //선언 이후 25로 초기화
+```
+
+### 1.3 변수의 명명규칙
+
+프로그래밍에서 사용하는 모든 이름을 '식별자'라고 하며 정해진 규칙을 지키며 만들어야 한다.
+
+1. 대소문자가 구분되며 길이에 제한이 없다.
+2. 예약어를 사용해서는 안된다.
+3. 숫자로 시작해서는 안된다
+   - top10은 가능, 10top은 불가능
+4. 특수문자는 '\_'와 '$'만을 허용한다.
+
+🥕 그리고 자바 프로그래머들에게 권장되는 규칙은 다음과 같다.
+
+1. 클래스 이름의 첫글자는 항상 대문자로 한다.
+2. 여러 단어로 이루어진 이름은 단어의 첫 글자를 대문자로 한다.
+3. 상수의 이름은 모두 대문자로 한다. 여러 단어로 이루어진 경우 '\_'로 구분한다.
+
+---
+
+## 2. 변수의 타입
+
+자료형은 크게 '기본형'과 '참조형' 두 가지로 나눌 수 있다. 기본형 변수는 실제 값(data)을 저장, 참조형 변수는 값이 저장되어 있는 주소(memory address)를 값으로 갖는다.
+
+#### 기본형 - 8개
+
+논리형(boolean), 문자형(char), 정수형(byte, short, int, long), 실수형(float, double), 계산을 위한 실제 값을 저장한다.
+
+#### 참조형
+
+객체의 주소를 저장한다. 기본형 8개를 제외한 나머지 타입을 말한다.
+
+### 2.1 기본형(primitive type)
+
+기본형은 8개의 타입이 존재하고, 크게 논리형, 문자형, 정수형, 실수형 4가지로 구분된다.
+
+| 분류   | 타입                                                                                                                                        |
+| ------ | ------------------------------------------------------------------------------------------------------------------------------------------- |
+| 논리형 | boolean                                                                                                                                     |
+|        | true와 false 중 하나를 값으로 가지며, 조건식과 논리적 계산에 사용                                                                           |
+| 문자형 | char                                                                                                                                        |
+|        | 문자를 저장하는데 사용, 변수 당 하나의 문자만 저장가능                                                                                      |
+| 정수형 | byte, short, int, long                                                                                                                      |
+|        | 정수 값을 저장하는데 사용된다. 주로 사용되는것은 **int와 long**<br/>byte는 이진데이터를 다루는데 주로 사용, short는 C언어와의 호환을 위한용 |
+| 실수형 | float, double                                                                                                                               |
+|        | 실수를 저장하는데 사용되며, 주로 double이 사용됨                                                                                            |
+
+📌 8개의 기본형 타입들은 각각 저장되는데 필요한 바이트(byte)가 다르다
+1byte - boolean, byte
+2byte - char, short
+4byte - int, float
+8byte - long, double
+기본 자료형의 종류와 크기는 반드시 숙지 할 것.
+
+<u>**실수형**</u>은 정수형은 저장형식이 달라서 같은 크기라도 훨씬 큰 값을 표현할 수 있으나 오차가 발생할 수 있는 단점이 있다. 그래서 <u>**정밀도**</u>가 중요한데, 정밀도는 높을수록 발생할 수 있는 오차범위가 줄어든다. float는 정밀도가 7자리이고 double은 정밀도가 15이므로 정밀도가 필요한 경우에는 double을 선택해야한다.
+
+2.2 상수와 리터럴(constant & literal)
