--- a/springboot/blogproject/22.연관관계의 주인.md
+++ b/springboot/blogproject/22.연관관계의 주인.md
@@ -23,20 +23,20 @@ FK를 가진 오브젝트를 이해하자
 
 마이바티스라면 위 3가지를 join해서 가져왔을 것
 하지만 ORM을 사용한다면? Board테이블만 불러오면됨
-`select \* from Board where Id = 1;`
+`select * from Board where Id = 1;`
 
 ---
 
 하나의 게시물에는 하나의 작성자
 하나의 게시물에는 여러개의 댓글
--> 댓글 오브젝트는 List가 되야한다
+-> 따라서 댓글 오브젝트는 List가 되야한다
 
 ```java
   @ManyToOne //Many=Board, User=One, '한명의 유저가 여러개의 게시물을 쓸 수 있다' 라는 의미
   @JoinColumn(name="userId")
   private User user;
 
-  private List<Reply> reply;
+  private List<Reply> reply;//하나의 게시물에 여러개의 댓글
 ```
 
 ---
